--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "url-shortener",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Yet another URL Shortener",
   "keywords": [
     "nodejs",
@@ -11,7 +11,8 @@
   ],
   "main": "main.js",
   "scripts": {
-    "start-dev": "nodemon main.js"
+    "start:dev": "nodemon main.js",
+    "start": "node main.js"
   },
   "author": "Artem Labazin <xxlabaza@gmail.com>",
   "license": "Apache-2.0",
